fix bug on ios

--- a/src/app/session-now/demarrage/demarrage.page.scss
+++ b/src/app/session-now/demarrage/demarrage.page.scss
@@ -28,7 +28,7 @@ ion-header{
 }
 ion-content{
   --background: #F4F5FA !important;
- 
+
   .circle{
       border: 1px solid white;
       background-color: white;
@@ -54,7 +54,7 @@ ion-content{
       }
   }
   .row-activite{
-     
+
       .activite{
           color: #2A2A2C;
           opacity: 50%;
@@ -100,7 +100,8 @@ ion-content{
       position: absolute;
       color: #2A2A2C;
       font-size: 13px;
-      margin-left: 5px;
+      margin-left: 31px !important;
+      margin-top:-50px !important;
       font-family: "PoppinsBold" !important;
   }
   .name{
@@ -116,7 +117,7 @@ ion-content{
   }
 
   .row-demarrage{
-      position: relative; 
+      position: relative;
       left: -50%
   }
   .demarrage{
@@ -126,7 +127,7 @@ ion-content{
       .param{
           background: #ffffff69 0% 0% no-repeat padding-box;
           box-shadow: 0px 13px 26px #00000029;
-          height: 68px;    
+          height: 68px;
           width: 68px;
           border-radius: 50%;
           padding: 17px;
@@ -151,7 +152,7 @@ ion-content{
               width: 27px;
               height: 29px;
           }
-          
+
       }
       .photo{
           background: #ffffff69 0% 0% no-repeat padding-box;
